crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_entry_point_provider.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_entry_point_provider/main.py
---
packages:
  - plugin-provider
count: 1
