crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_enumerated_plugin.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_enumerated_plugin/main.py
---
packages:
  - plugin-pkg==1.0
count: 1
