crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_eval_import.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_eval_import/main.py
---
packages:
  - ev-pkg
count: 1
