crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_exec_provider.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_exec_provider/main.py
---
packages:
  - exec-pkg
count: 1
