crates/cribo/tests/snapshots/requirements@xfail_bundle_third_party_extras_dependency.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_extras_dependency/main.py
---
packages:
  - "native-pkg[speed]"
  - pure-pkg
count: 2
